package com.example.oulearning.training.domain;


public enum Modality {
  VIRTUAL,
  ON_SITE,
  E_LEARNING,
  BLENDED
}
