package com.example.oulearning.training.domain;


public record TrainingId(long value) {

    public TrainingId {
        TrainingGuard.requireTrainingId(value);
    }

    public static TrainingId of(final long value) {
        return new TrainingId(value);
    }

    public static TrainingId fromString(final String value) {
        return new TrainingId(TrainingGuard.requireValidTrainingId(value));
    }

    @Override
    public String toString() {
        return String.valueOf(value);
    }
}
