package com.example.oulearning.training.domain;


public enum TrainingStatus {
  REQUESTED,
  APPROVED,
  REJECTED
}
