@startuml
title Basic Domain Model

skinparam classAttributeIconSize 0

package "organization" {

    package "Hierarchy" {

        class OrganizationalUnitId <<Value Object>> {
            - value : long
        }

        class Name <<Value Object>> {
            - value : String
        }

        class OrganizationalUnit {
            - id : OrganizationalUnitId
            - name : Name
            - parentId : OrganizationalUnitId
            - childIds : Set<OrganizationalUnitId>
            - owners : Set<EmployeeId>
            - members : Set<EmployeeId>
        }

        class Organization {
            - organizationalUnitIds : Set<OrganizationalUnitId>
        }

        OrganizationalUnit *-- OrganizationalUnitId
        OrganizationalUnit *-- Name
        OrganizationalUnit --> OrganizationalUnitId : parentId
        OrganizationalUnit o-- OrganizationalUnitId : childIds
        OrganizationalUnit o-- Employee.EmployeeId : owners
        OrganizationalUnit o-- Employee.EmployeeId : members

        Organization o-- OrganizationalUnitId
    }

    package "Employee" {

        class EmployeeId <<Value Object>> {
            - value : long
        }

        class Name <<Value Object>> {
            - value : String
        }

        class Surname <<Value Object>> {
            - value : String
        }

        class FullName <<Value Object>> {
            - name : Name
            - surname : Surname
        }

        class Email <<Value Object>> {
            - value : String
        }

        class Employee {
            - id : EmployeeId
            - fullName : FullName
            - email : Email
        }

        Employee *-- EmployeeId
        Employee *-- FullName
        Employee *-- Email

        FullName *-- Name
        FullName *-- Surname
    }
}

package "budgeting" {

    class BudgetId <<Value Object>> {
        - value : long
    }

    class FiscalYear <<Value Object>> {
        - value : int
    }

    class Money <<Value Object>> {
        - amount : BigDecimal
        - currency : String
    }

    class Budget {
        - id : BudgetId
        - organizationalUnitId : OrganizationalUnitId
        - fiscalYear : FiscalYear
        - total : Money
        - reserved : Money
        - available : Money
    }

    Budget *-- BudgetId
    Budget --> organization.Hierarchy.OrganizationalUnitId : organizationalUnitId
    Budget *-- FiscalYear
    Budget *-- Money : total
    Budget *-- Money : reserved
    Budget *-- Money : available
}

package "training" {

    class TrainingId <<Value Object>> {
        - value : long
    }

    class TrainingName <<Value Object>> {
        - value : String
    }

    class Cost <<Value Object>> {
        - amount : BigDecimal
        - currency : String
    }

    class Hours <<Value Object>> {
        - value : int
    }

    class TypeId <<Value Object>> {
        - value : long
    }

    class TypeName <<Value Object>> {
        - value : String
    }

    class Phone <<Value Object>> {
        - value : String
    }

    class ExternalProviderName <<Value Object>> {
        - value : String
    }

    class ExternalProviderContact <<Value Object>> {
        - email : Email
        - phone : Phone
    }

    class ExternalProvider <<Value Object>> {
        - name : ExternalProviderName
        - contact : ExternalProviderContact
    }

    enum Modality {
        VIRTUAL
        ON_SITE
        E_LEARNING
        BLENDED
    }

    enum TrainingPurposeType {
        INDIVIDUAL_DEVELOPMENT_PLAN
        DEPARTMENT_GOALS
        OTHER
    }

    class TrainingPurpose <<Value Object>> {
        - type : TrainingPurposeType
        - otherPurpose : String
    }

    class ManagerReview <<Value Object>> {
        - comments : String
        - modality : Modality
        - startDate : Instant
        - endDate : Instant
        - externalProvider : ExternalProvider
        - reviewedAt : Instant
    }

    enum TrainingStatus {
        REQUESTED
        APPROVED
        REJECTED
    }

    class Type {
        - id : TypeId
        - name : TypeName
        - parentTypeId : TypeId
    }

    class Training {
        - id : TrainingId
        - requestedBy : EmployeeId
        - organizationalUnitId : OrganizationalUnitId
        - name : TrainingName
        - cost : Cost
        - hours : Hours
        - purpose : TrainingPurpose
        - typeId : TypeId
        - status : TrainingStatus
        - managerReview : ManagerReview
        - createdAt : Instant
        - updatedAt : Instant
        - attendees : Set<EmployeeId>
    }

    Training *-- TrainingId
    Training --> organization.Employee.EmployeeId : requestedBy
    Training --> organization.Hierarchy.OrganizationalUnitId : organizationalUnitId
    Training *-- TrainingName
    Training *-- Cost
    Training *-- Hours
    Training *-- TrainingPurpose
    Training --> TypeId : typeId
    Training --> TrainingStatus : status
    Training o-- ManagerReview : managerReview
    Training o-- organization.Employee.EmployeeId : attendees

    TrainingPurpose *-- TrainingPurposeType

    ManagerReview *-- Modality
    ManagerReview o-- ExternalProvider

    ExternalProvider *-- ExternalProviderName
    ExternalProvider *-- ExternalProviderContact
    ExternalProviderContact *-- organization.Employee.Email : email
    ExternalProviderContact *-- Phone : phone

    Type *-- TypeId
    Type *-- TypeName
    Type --> TypeId : parentTypeId
}

@enduml
